<resources>
    <string name="app_name">Test</string>
    <string name="name_label">Введите свое имя (псевдоним) : </string>
    <string name="name_hint">Имя...</string>
    <string name="age_label">Ваш возраст: </string>
    <string name="age_button">Выбрать возраст</string>
    <string name="sex_label">Ваш пол: </string>
    <string name="male_label">М</string>
    <string name="female_label">Ж</string>
    <string name="access_label">Принять</string>
    <string name="end_test_button">Закончить тест</string>

    <string name="question_number">Вопрос № %1d:</string>

    <string name="q1">Это ко мне совершенно не относится</string>
    <string name="q2">Мне это не свойственно в большинстве случаев</string>
    <string name="q3">Сомневаюсь, что это можно отнести ко мне</string>
    <string name="q4">Не решаюсь отнести это к себе</string>
    <string name="q5">Это похоже на меня, но нет уверенности</string>
    <string name="q6">Это на меня похоже</string>
    <string name="q7">Это точно про меня</string>

    <string name="q11">Нет</string>
    <string name="q12">Несколько дней</string>
    <string name="q13">Более половины дней</string>
    <string name="q14">Почти каждый день</string>

    <string name="repeat_button">Повторить</string>
    <string name="call_doctor">Связаться со специалистом</string>

    <string name="empty_fields_hint">Вы не заполнили все поля</string>

    <string name="hight_suicide_level">\nУ вас обнаружена высокая социально-психологическая дезадаптация\n(высокая вероятность суицидального риска).
        Вам необходимо срочно обратиться к специалисту(медицинскому психологу, психотерапевту).
        \nВам обязательно помогут!
        \nКвалифицированные сотрудники нашего отделения могут принять Вас уже завтра с 9:00,
        \nзвоните по тел. 87456348658 и записывайтесь.
        \nСписок наших сотрудников представлен в разделе «КЛИНИКИ».
        \nТакже Вы можете ознакомиться с некоторыми рекомендациями, которые мы для Вас подобрали по <u>ссылке</u>.
    </string>

    <string name="mid_suicide_level">\nУ вас обнаружена относительно высокая социально-психологическая дезадаптация
        \n(вероятность суицидального риска средней степени).
        \nВам необходимо обратиться к специалисту (медицинскому психологу, психотерапевту).
        \nВам обязательно помогут!
        \nКвалифицированные сотрудники нашего отделения могут принять Вас уже завтра с 9:00,
        \nзвоните по тел. 87456348658 и записывайтесь.
        \nСписок наших сотрудников представлен в разделе «КЛИНИКИ».
        \nТакже Вы можете ознакомиться с некоторыми рекомендациями, которые мы для Вас подобрали по ссылке.
    </string>

    <string name="small_suicide_level">\nУ вас нормальная социально-психологическая адаптация (суицидальный риск не выявлен).
        \nУ Вас нет необходимости обращения к специалисту (медицинскому психологу, психотерапевту).
        \nНо если остались какие-то вопросы – мы рады Вам помочь!
        \nКвалифицированные сотрудники нашего отделения могут принять Вас уже завтра с 9:00,
        \nзвоните по тел. 87456348658 и записывайтесь.
        \nСписок наших сотрудников представлен в разделе «КЛИНИКИ».
        \nТакже Вы можете ознакомиться с некоторыми рекомендациями, которые мы для Вас подобрали по ссылке.
    </string>



</resources>
